--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,5 +2,5 @@
 # https://rustwasm.github.io/docs/wasm-bindgen/web-sys/unstable-apis.html
 # check status at https://developer.mozilla.org/en-US/docs/Web/API/Clipboard#browser_compatibility
 # we don't use `[build]` because of rust analyzer's build cache invalidation https://github.com/emilk/eframe_template/issues/93
-[target.wasm32-unknown-unknown]
+[target.wasm32-wasi]
 rustflags = ["--cfg=web_sys_unstable_apis"]
